Adicionando imagem serviço Orbia +

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ session_start();
               <small><strong style="color:#9b7fb6;">MINHA CONTA</strong></small>
             </span>
             <div class="dropdown-menu" style="z-index:1111;">
+              <img src="imgs/assine.png" alt="">
               <a href="php/minhaConta.php">🏠 Minha Conta</a>
               <a href="#">📦 Meus pedidos</a>
               <a href="#">👤 Meus dados</a>
@@ -88,12 +89,12 @@ session_start();
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div>
-              <img src="imgs/Banner Mês do Consumidor - E-commerce 2.png" alt="" width="100%">
+              <img src="imgs/EXPLORE.png" alt="" width="100%"> 
             </div>
           </div>
           <div class="swiper-slide">
             <div>
-              <img src="imgs/orbiatecnology@gmail.com.jpg" alt="" width="100%">
+              <img src="imgs/Banner Mês do Consumidor - E-commerce 2.png" alt="" width="100%">
             </div>
           </div>
           <div class="swiper-slide">
