--- a/php/minhaConta.html
+++ b/php/minhaConta.html
@@ -36,6 +36,7 @@ if (!isset($_SESSION['email']) && !isset($_SESSION['nome_completo'])) {
               <small><strong style="color:#9b7fb6;">MINHA CONTA</strong></small>
             </span>
             <div class="dropdown-menu" style="z-index:1111;">
+              <img src="../imgs/assine.png" alt="">
               <a href="php/minhaConta.php">🏠 Minha Conta</a>
               <a href="#">📦 Meus pedidos</a>
               <a href="#">👤 Meus dados</a>
